--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: ${PORT:8080}
 
 spring:
   application:
@@ -7,17 +7,15 @@ spring:
   cloud:
     gateway:
       routes:
-        # Rutas para User Service
         - id: user-service
-          uri: http://user-service:8081
+          uri: ${USER_SERVICE_URL:http://localhost:8081}
           predicates:
             - Path=/api/users/**
           filters:
             - StripPrefix=2
 
-        # Rutas para Product Service
         - id: product-service
-          uri: http://product-service:8082
+          uri: ${PRODUCT_SERVICE_URL:http://localhost:8082}
           predicates:
             - Path=/api/products/**
           filters:
@@ -36,5 +34,4 @@ spring:
 
 logging:
   level:
-    org.springframework.cloud.gateway: DEBUG
-    org.springframework.cloud.gateway.route: DEBUG
+    org.springframework.cloud.gateway: INFO
